Adresses #50 - Fixed overlapping text.

--- a/src/app/www/css/index.css
+++ b/src/app/www/css/index.css
@@ -143,7 +143,6 @@ body {
 
 .description-full {
 	margin-right: 5px;
-	max-height: 60px;
 	text-overflow: clip;
 	overflow: visible;
 	white-space: normal;
@@ -161,7 +160,6 @@ body {
 	font-size: 0.8em;
 	overflow: visible;
 	margin-right: 5px;
-	max-height: 3.3em;
 }
 
 #questions {
